logging configured