@@ -24,7 +24,7 @@
         		<artifactId>maven-surefire-plugin</artifactId>
         		<configuration>
 					<forkCount>0</forkCount>
-					<argLine>-Xmx32m -Xms32m -Xloggc:gc.log -XX:+PrintGCDetails</argLine>
+					<argLine>-Xmx256m -Xms256m</argLine>
           			<!-- <parallel>classes</parallel> -->
         		</configuration>
       		</plugin>
@@ -67,5 +67,10 @@
     		<version>4.11</version>
     		<scope>test</scope>
   		</dependency>
+	  <dependency>
+		  <groupId>log4j</groupId>
+		  <artifactId>log4j</artifactId>
+		  <version>1.2.17</version>
+	  </dependency>
 	</dependencies>
 </project>
